Implemented support for status codes